--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <script>
         // 配置你的CSV文件名
-        const DEFAULT_CSV_FILE = "PROTAC_Ternary_Complex_from_PDB.csv"; // 替换为你的CSV文件名
+        const DEFAULT_CSV_FILE = "./PROTAC_Ternary_Complex_from_PDB.csv"; // 替换为你的CSV文件名
         
         // Global variables to store data
         let csvData = null;
