--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <body class="bg-gray-50 font-sans text-neutral">
     <header class="bg-gradient-to-r from-primary to-accent text-white shadow-md">
         <div class="container mx-auto px-4 py-8">
-            <h1 class="text-[clamp(1.8rem,4vw,3rem)] font-bold mb-2">Data Visualization Dashboard</h1>
-            <p class="text-lg opacity-90">Interactive charts for your dataset</p>
+            <h1 class="text-[clamp(1.8rem,4vw,3rem)] font-bold mb-2">Data Visualization for PROTAC Ternary Complexes from PDB</h1>
+            <p class="text-lg opacity-90">by Zhao Tanfeng</p>
         </div>
     </header>
 
@@ -59,7 +59,7 @@
                 </h2>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
                     <div class="bg-blue-50 p-4 rounded-lg border border-blue-100">
-                        <p class="text-sm text-blue-600">Total Rows</p>
+                        <p class="text-sm text-blue-600">Total Complex</p>
                         <p id="rowCount" class="text-2xl font-bold text-blue-800">0</p>
                     </div>
                     <div class="bg-green-50 p-4 rounded-lg border border-green-100">
@@ -181,6 +181,7 @@
                     break;
                 }
             }
+            categoryCol = "E3"
             
             if (categoryCol) {
                 const chartDiv = document.createElement('div');
