--- a/index.html
+++ b/index.html
@@ -229,6 +229,9 @@
                                     label: function(context) {
                                         const label = context.label || '';
                                         const value = context.raw || 0;
+                                        if (value === undefined) {
+                                            return '';
+                                        }
                                         const total = context.dataset.data.reduce((a, b) => a + b, 0);
                                         const percentage = Math.round((value / (total - 1)) * 100);
                                         return `${label}: ${value} (${percentage}%)`;
@@ -293,6 +296,9 @@
                                     label: function(context) {
                                         const label = context.label || '';
                                         const value = context.raw || 0;
+                                        if (value === undefined) {
+                                            return '';
+                                        }
                                         const total = context.dataset.data.reduce((a, b) => a + b, 0);
                                         const percentage = Math.round((value / (total - 1)) * 100);
                                         return `${label}: ${value} (${percentage}%)`;
