--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             let date = new Date();
             //document.getElementById('lastUpdated').textContent = now.toLocaleString();
             date.setFullYear(2025, 9, 1);
-            const formatted2 = date.toLocaleDateString('zh-CN');
+            const formatted2 = date.toLocaleString();
             document.getElementById('lastUpdated').textContent = formatted2;
         }
 
