--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
             const now = new Date();
             let date = new Date();
             //document.getElementById('lastUpdated').textContent = now.toLocaleString();
-            date.setFullYear(2025, 9, 1);
-            const formatted2 = date.toLocaleString();
+            date.setFullYear(2025, 8, 1);
+            const formatted2 = date.toLocaleDateString();
             document.getElementById('lastUpdated').textContent = formatted2;
         }
 
