--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 
                 // 箱线图数据
                 const data = {
-                  labels: ['SASA_E3_POI', 'SASA_E3', 'SASA_POI', 'SASA_interface'],
+                  labels: ['SASA_E3_POI', 'SASA_E3', 'SASA_POI', 'Interface'],
                   datasets: [
                     {
                       label: 'SASA Area',
@@ -595,4 +595,3 @@
     </script>
 </body>
 </html>
-    
